# LabWork3

./: CMakeLists.txt  README.md
include/: LexUtility.hpp  MathExpr.hpp
report/: Отчёт_по_лабораторной_работе_3.docx
samples/: CMakeLists.txt  core.cpp
tests/: test_expression.cpp
